--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col s12 center">
                     <h3><i class="mdi-maps-directions-car brown-text"></i></h3>
-                    <h4>What type of car do you drive?</h4>
+                    <h4>What cars do you drive?</h4>
                 </div>
                 <div class="col s12 m4">
                     <div class="card">
@@ -193,12 +193,12 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img src="./img/cars/sedan.jpg">
+                            <img src="./img/foods/fruits.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">
-                                <input type="checkbox" id="car-sedan" />
-                                <label for="car-sedan">Sedan</label>
+                                <input type="checkbox" id="food-fruits" />
+                                <label for="food-fruits">Fruits</label>
                             </span>
                         </div>
                     </div>
@@ -206,29 +206,27 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img src="./img/cars/ev.jpg">
+                            <img src="./img/foods/fish.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">
-                                <input type="checkbox" id="car-ev" />
-                                <label for="car-ev">It's electric Boogie woogie, woogie!</label>
+                                <input type="checkbox" id="food-fish" />
+                                <label for="food-fish">Fish</label>
                             </span>
                         </div>
-
                     </div>
                 </div>
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img src="./img/cars/18.jpg">
+                            <img src="./img/foods/eggs.jpg">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">
-                                <input type="checkbox" id="car-18" />
-                                <label for="car-18">18 wheeler</label>
+                                <input type="checkbox" id="food-eggs" />
+                                <label for="food-eggs">Eggs</label>
                             </span>
                         </div>
-
                     </div>
                 </div>
             </div>
